@@ -1,3 +1,11 @@
+2011-03-25  Tony Chang  <tony@chromium.org>
+
+        Build fix:
+        have chromium and qt use the correct FontPlatformData.h
+        https://bugs.webkit.org/show_bug.cgi?id=57115
+
+        * platform/graphics/FontPlatformData.h:
+
 2011-03-25  Beth Dakin  <bdakin@apple.com>
 
         Reviewed by Dave Hyatt.
